--- a/app/src/main/res/layout/fragment_changepassword.xml
+++ b/app/src/main/res/layout/fragment_changepassword.xml
@@ -1,6 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<!--
+  ~ Copyright (C) 2021 xiaoxiao(1018982338@qq.com)
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  ~
+  -->
 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical">
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="请修改密码" />
+            <FrameLayout
+                android:id="@+id/fl_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:tint="?attr/colorAccent"
+                    app:srcCompat="@drawable/ic_password" />
+
+                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
+                    android:id="@+id/et_local_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="36dp"
+                    android:hint="@string/hint_local_password"
+                    android:inputType="text"
+                    app:met_passWordButton="true"
+                    app:met_isAsteriskStyle="true"
+                    app:met_clearButton="false"
+                    app:met_errorMessage="@string/tip_password_error"
+                    app:met_floatingLabel="normal"
+                    app:met_floatingLabelText="@string/title_old_password"
+                    app:met_maxCharacters="18"
+                    app:met_minCharacters="8"
+                    app:met_regexp="@string/regex_password" />
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:tint="?attr/colorAccent"
+                    app:srcCompat="@drawable/ic_password" />
+
+                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
+                    android:id="@+id/et_new_password1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="36dp"
+                    android:hint="@string/hint_new_password"
+                    android:inputType="text"
+                    app:met_helperTextAlwaysShown="true"
+                    app:met_helperText="@string/tip_password_error"
+                    app:met_helperTextColor="@color/app_color_theme_7"
+                    app:met_passWordButton="true"
+                    app:met_isAsteriskStyle="true"
+                    app:met_clearButton="false"
+                    app:met_errorMessage="@string/tip_password_error"
+                    app:met_floatingLabel="normal"
+                    app:met_floatingLabelText="@string/title_new_password"
+                    app:met_maxCharacters="18"
+                    app:met_minCharacters="8"
+                    app:met_regexp="@string/regex_password" />
+
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start|center_vertical"
+                    android:tint="?attr/colorAccent"
+                    app:srcCompat="@drawable/ic_password" />
+
+                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
+                    android:id="@+id/et_new_password2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="36dp"
+                    android:hint="@string/hint_repeat_password"
+                    android:inputType="text"
+                    app:met_passWordButton="true"
+                    app:met_isAsteriskStyle="true"
+                    app:met_clearButton="false"
+                    app:met_floatingLabel="normal"
+                    app:met_floatingLabelText="@string/title_new_password"
+                    app:met_maxCharacters="18"
+                    app:met_minCharacters="8"/>
+
+            </FrameLayout>
+
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
