--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -51,6 +51,12 @@
 <!--                    style="@style/InfoItem.Account"-->
 <!--                    app:sDividerLineType="none"-->
 <!--                    app:sLeftTextString="帮助" />-->
+                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
+                    android:id="@+id/menu_change_password"
+                    style="@style/InfoItem"
+                    android:layout_marginTop="16dp"
+                    app:sCenterTextString="修改密码"
+                    app:sDividerLineType="none" />
 
                 <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                     android:id="@+id/menu_change_account"
